# agent-bootstrap

./: .gitignore  AGENTS.md  CHANGELOG.md  IMPLEMENTATION_TRACKER.md  LICENSE  README.md  bootstrap-manifest.yaml
.github/workflows/: ci.yml  codeql.yml
docs/: BOOTSTRAP_RELEASE_WORKFLOW.md  BOOTSTRAP_VERSIONING.md
examples/infra-repo/: example-notes.md
examples/kubernetes-platform/: example-notes.md
examples/python-service/: example-notes.md
examples/vscode-extension/: example-notes.md
fixtures/: README.md
fixtures/population/: minimal-infra-repo.json  minimal-python-service.json
fixtures/targets/minimal-infra-repo/: README.md
fixtures/targets/minimal-python-service/: README.md  conftest.py  pyproject.toml
fixtures/targets/minimal-python-service/src/: app.py
fixtures/targets/minimal-python-service/tests/: test_smoke.py
prompts/: bounded-implementation.md  closeout-and-handoff.md  existing-repo-discovery.md  new-repo-bootstrap.md  resume-work.md
schemas/: bootstrap_bulk_audit_report.schema.json  bootstrap_doctor_report.schema.json  implementation_tracker.schema.json  repo_discovery.schema.json
scripts/: apply_bootstrap.py  bootstrap_core.py  bootstrap_doctor.py  bootstrap_status.py  bulk_audit.py  refresh_bootstrap.py  run_fixture_selftest.py  suggest_profile.py  validate_bootstrap.py
templates/: AGENTS.md.template  IMPLEMENTATION_TRACKER.md.template
templates/artifacts/ai/: repo_discovery.json.template
templates/bootstrap/: BOOTSTRAP_SOURCE.md.template
tests/: test_bootstrap_core.py  test_bootstrap_doctor.py  test_bulk_audit.py
(+9 files in other folders)
